[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/hex_root.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/pop.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/sounds/typewriter.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/triangle_slow_bass.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/triangle_slow.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/triangle_wave.wav" type="AudioStream" id=6]
[ext_resource path="res://scripts/data_send.gd" type="Script" id=7]
[ext_resource path="res://assets/batmfa__.ttf" type="DynamicFontData" id=8]

[sub_resource type="Environment" id=1]
background_mode = 4
fog_height_min = 0.0
fog_height_max = 100.0
ssao_quality = 0
glow_enabled = true
glow_levels/5 = false
glow_intensity = 1.0
glow_blend_mode = 0
glow_hdr_threshold = 0.4
glow_hdr_scale = 1.0
glow_bicubic_upscale = true

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 8 )

[node name="hex_root" type="Node"]
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="move" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="lose" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "drone-reverb"

[node name="spiccatoB" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="spiccato" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="win" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="data_send" type="HTTPRequest" parent="."]
script = ExtResource( 7 )

[node name="end_label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
rect_rotation = 270.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
